--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_A_DIFFERENT_MONSTER.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_A_DIFFERENT_MONSTER.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191433&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=t99pDMvixnW364G8WIcF0OIyUT5kYhhfsM8s40cIu3U%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191435&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hbYNqLU1u2aqEzN%2BCsZo9iSswr8DKE7kAymCsfbI0po%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191433&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=t99pDMvixnW364G8WIcF0OIyUT5kYhhfsM8s40cIu3U%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707191435&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hbYNqLU1u2aqEzN%2BCsZo9iSswr8DKE7kAymCsfbI0po%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:50:33 GMT
+      - Tue, 06 Feb 2024 03:50:35 GMT
       X-Ratelimit-Reset:
-      - '1707191435'
+      - '1707191436'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,7 +171,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:50:34 GMT
+  recorded_at: Tue, 06 Feb 2024 03:50:35 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -208,9 +208,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191434&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=MYjQtmZGoGNENgj7NRPS79OJ1hHV8%2Fn%2BfOqulHO1LsA%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191435&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hbYNqLU1u2aqEzN%2BCsZo9iSswr8DKE7kAymCsfbI0po%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191434&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=MYjQtmZGoGNENgj7NRPS79OJ1hHV8%2Fn%2BfOqulHO1LsA%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707191435&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hbYNqLU1u2aqEzN%2BCsZo9iSswr8DKE7kAymCsfbI0po%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -224,9 +224,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:50:34 GMT
+      - Tue, 06 Feb 2024 03:50:35 GMT
       X-Ratelimit-Reset:
-      - '1707191436'
+      - '1707191437'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -343,19 +343,19 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:50:34 GMT
+  recorded_at: Tue, 06 Feb 2024 03:50:35 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_193040($index:
+      string: '{"query":"query GraphQL__Client__OperationDefinition_232480($index:
         String) {\n  monster(index: $index) {\n    index\n    name\n    size\n    armor_class
         {\n      value\n    }\n    speed {\n      walk\n      fly\n      swim\n    }\n    hit_points\n    strength\n    dexterity\n    constitution\n    intelligence\n    wisdom\n    charisma\n    damage_vulnerabilities\n    damage_resistances\n    damage_immunities\n    proficiency_bonus\n    proficiencies
         {\n      proficiency {\n        name\n      }\n      value\n    }\n    senses
         {\n      blindsight\n      darkvision\n      passive_perception\n    }\n    special_abilities
         {\n      name\n      desc\n    }\n    actions {\n      name\n      desc\n    }\n    legendary_actions
-        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_193040","variables":{"index":"aboleth"}}'
+        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_232480","variables":{"index":"goblin"}}'
     headers:
       Content-Type:
       - application/json
@@ -373,9 +373,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191435&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hbYNqLU1u2aqEzN%2BCsZo9iSswr8DKE7kAymCsfbI0po%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191436&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=x1Rsnd9jK6Hhfmz326Q4dATMMs%2F2Ls44UE0ar8ICyAg%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191435&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hbYNqLU1u2aqEzN%2BCsZo9iSswr8DKE7kAymCsfbI0po%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707191436&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=x1Rsnd9jK6Hhfmz326Q4dATMMs%2F2Ls44UE0ar8ICyAg%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -389,57 +389,28 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:50:35 GMT
+      - Tue, 06 Feb 2024 03:50:36 GMT
       X-Ratelimit-Reset:
-      - '1707191436'
+      - '1707191437'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '3353'
+      - '947'
       Etag:
-      - W/"d19-nVNcoCXicw27QyvRt8i+vuNFwnA"
+      - W/"3b3-7fkDqKgDaE+IPaZOyLCnuAuoHD4"
       Via:
       - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '{"data":{"monster":{"index":"aboleth","name":"Aboleth","size":"LARGE","armor_class":[{"value":17}],"speed":{"walk":"10
-        ft.","fly":null,"swim":"40 ft."},"hit_points":135,"strength":21,"dexterity":9,"constitution":15,"intelligence":18,"wisdom":15,"charisma":18,"damage_vulnerabilities":[],"damage_resistances":[],"damage_immunities":[],"proficiency_bonus":4,"proficiencies":[{"proficiency":{"name":"Saving
-        Throw: CON"},"value":6},{"proficiency":{"name":"Saving Throw: INT"},"value":8},{"proficiency":{"name":"Saving
-        Throw: WIS"},"value":6},{"proficiency":{"name":"Skill: History"},"value":12},{"proficiency":{"name":"Skill:
-        Perception"},"value":10}],"senses":{"blindsight":null,"darkvision":"120 ft.","passive_perception":20},"special_abilities":[{"name":"Amphibious","desc":"The
-        aboleth can breathe air and water."},{"name":"Mucous Cloud","desc":"While
-        underwater, the aboleth is surrounded by transformative mucus. A creature
-        that touches the aboleth or that hits it with a melee attack while within
-        5 ft. of it must make a DC 14 Constitution saving throw. On a failure, the
-        creature is diseased for 1d4 hours. The diseased creature can breathe only
-        underwater."},{"name":"Probing Telepathy","desc":"If a creature communicates
-        telepathically with the aboleth, the aboleth learns the creature''s greatest
-        desires if the aboleth can see the creature."}],"actions":[{"name":"Multiattack","desc":"The
-        aboleth makes three tentacle attacks."},{"name":"Tentacle","desc":"Melee Weapon
-        Attack: +9 to hit, reach 10 ft., one target. Hit: 12 (2d6 + 5) bludgeoning
-        damage. If the target is a creature, it must succeed on a DC 14 Constitution
-        saving throw or become diseased. The disease has no effect for 1 minute and
-        can be removed by any magic that cures disease. After 1 minute, the diseased
-        creature''s skin becomes translucent and slimy, the creature can''t regain
-        hit points unless it is underwater, and the disease can be removed only by
-        heal or another disease-curing spell of 6th level or higher. When the creature
-        is outside a body of water, it takes 6 (1d12) acid damage every 10 minutes
-        unless moisture is applied to the skin before 10 minutes have passed."},{"name":"Tail","desc":"Melee
-        Weapon Attack: +9 to hit, reach 10 ft., one target. Hit: 15 (3d6 + 5) bludgeoning
-        damage."},{"name":"Enslave","desc":"The aboleth targets one creature it can
-        see within 30 ft. of it. The target must succeed on a DC 14 Wisdom saving
-        throw or be magically charmed by the aboleth until the aboleth dies or until
-        it is on a different plane of existence from the target. The charmed target
-        is under the aboleth''s control and can''t take reactions, and the aboleth
-        and the target can communicate telepathically with each other over any distance.\nWhenever
-        the charmed target takes damage, the target can repeat the saving throw. On
-        a success, the effect ends. No more than once every 24 hours, the target can
-        also repeat the saving throw when it is at least 1 mile away from the aboleth."}],"legendary_actions":[{"name":"Detect","desc":"The
-        aboleth makes a Wisdom (Perception) check."},{"name":"Tail Swipe","desc":"The
-        aboleth makes one tail attack."},{"name":"Psychic Drain (Costs 2 Actions)","desc":"One
-        creature charmed by the aboleth takes 10 (3d6) psychic damage, and the aboleth
-        regains hit points equal to the damage the creature takes."}],"condition_immunities":[]}}}
+      string: '{"data":{"monster":{"index":"goblin","name":"Goblin","size":"SMALL","armor_class":[{"value":15}],"speed":{"walk":"30
+        ft.","fly":null,"swim":null},"hit_points":7,"strength":8,"dexterity":14,"constitution":10,"intelligence":10,"wisdom":8,"charisma":8,"damage_vulnerabilities":[],"damage_resistances":[],"damage_immunities":[],"proficiency_bonus":2,"proficiencies":[{"proficiency":{"name":"Skill:
+        Stealth"},"value":6}],"senses":{"blindsight":null,"darkvision":"60 ft.","passive_perception":9},"special_abilities":[{"name":"Nimble
+        Escape","desc":"The goblin can take the Disengage or Hide action as a bonus
+        action on each of its turns."}],"actions":[{"name":"Scimitar","desc":"Melee
+        Weapon Attack: +4 to hit, reach 5 ft., one target. Hit: 5 (1d6 + 2) slashing
+        damage."},{"name":"Shortbow","desc":"Ranged Weapon Attack: +4 to hit, range
+        80/320 ft., one target. Hit: 5 (1d6 + 2) piercing damage."}],"legendary_actions":null,"condition_immunities":[]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:50:34 GMT
+  recorded_at: Tue, 06 Feb 2024 03:50:36 GMT
 recorded_with: VCR 6.2.0
