--- a/spec/fixtures/vcr_cassettes/Queries_Monster/monster/returns_monster_details.yml
+++ b/spec/fixtures/vcr_cassettes/Queries_Monster/monster/returns_monster_details.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191224&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=NKmRMt0%2FecBFF1s2ERL%2BN807ls%2Bl7IcOG2Wtw3BgCQY%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191429&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2BoDtwTTvXKsVU56hser%2BoAyH%2BFvL9tIchhm%2FkqgNQ58%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191224&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=NKmRMt0%2FecBFF1s2ERL%2BN807ls%2Bl7IcOG2Wtw3BgCQY%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707191429&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2BoDtwTTvXKsVU56hser%2BoAyH%2BFvL9tIchhm%2FkqgNQ58%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:47:04 GMT
+      - Tue, 06 Feb 2024 03:50:29 GMT
       X-Ratelimit-Reset:
-      - '1707191226'
+      - '1707191431'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,7 +171,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:47:04 GMT
+  recorded_at: Tue, 06 Feb 2024 03:50:30 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -208,9 +208,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191224&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=NKmRMt0%2FecBFF1s2ERL%2BN807ls%2Bl7IcOG2Wtw3BgCQY%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191431&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=8OfWHPQGaqENA6cCjE%2FAiKvp%2BLVehW4foE%2BhcS%2FBoG0%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191224&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=NKmRMt0%2FecBFF1s2ERL%2BN807ls%2Bl7IcOG2Wtw3BgCQY%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707191431&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=8OfWHPQGaqENA6cCjE%2FAiKvp%2BLVehW4foE%2BhcS%2FBoG0%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -224,9 +224,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:47:04 GMT
+      - Tue, 06 Feb 2024 03:50:31 GMT
       X-Ratelimit-Reset:
-      - '1707191226'
+      - '1707191432'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -343,7 +343,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:47:05 GMT
+  recorded_at: Tue, 06 Feb 2024 03:50:31 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -373,9 +373,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191225&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=H8moyvAFFOxeA1BWHFamxvCa617UB861QGTS%2F6%2F7eYA%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191431&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=8OfWHPQGaqENA6cCjE%2FAiKvp%2BLVehW4foE%2BhcS%2FBoG0%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191225&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=H8moyvAFFOxeA1BWHFamxvCa617UB861QGTS%2F6%2F7eYA%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707191431&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=8OfWHPQGaqENA6cCjE%2FAiKvp%2BLVehW4foE%2BhcS%2FBoG0%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -389,9 +389,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:47:05 GMT
+      - Tue, 06 Feb 2024 03:50:31 GMT
       X-Ratelimit-Reset:
-      - '1707191227'
+      - '1707191433'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -441,5 +441,5 @@ http_interactions:
         regains hit points equal to the damage the creature takes."}],"condition_immunities":[]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:47:05 GMT
+  recorded_at: Tue, 06 Feb 2024 03:50:31 GMT
 recorded_with: VCR 6.2.0
