--- a/spec/fixtures/vcr_cassettes/Queries_Monsters/monsters/returns_all_monsters.yml
+++ b/spec/fixtures/vcr_cassettes/Queries_Monsters/monsters/returns_all_monsters.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191225&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=H8moyvAFFOxeA1BWHFamxvCa617UB861QGTS%2F6%2F7eYA%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191432&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=w7NghZ5XkBt2Nx%2BM8Ut%2FTPP9vAGCMu%2BOBJch858tm6Q%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191225&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=H8moyvAFFOxeA1BWHFamxvCa617UB861QGTS%2F6%2F7eYA%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707191432&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=w7NghZ5XkBt2Nx%2BM8Ut%2FTPP9vAGCMu%2BOBJch858tm6Q%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:47:05 GMT
+      - Tue, 06 Feb 2024 03:50:32 GMT
       X-Ratelimit-Reset:
-      - '1707191227'
+      - '1707191433'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,7 +171,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:47:05 GMT
+  recorded_at: Tue, 06 Feb 2024 03:50:32 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191226&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=uI3BJaGb6tJoGYsU3H%2FqRCbiyUbo2YQ1Xu74Bh%2FW5C4%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191432&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=w7NghZ5XkBt2Nx%2BM8Ut%2FTPP9vAGCMu%2BOBJch858tm6Q%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191226&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=uI3BJaGb6tJoGYsU3H%2FqRCbiyUbo2YQ1Xu74Bh%2FW5C4%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707191432&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=w7NghZ5XkBt2Nx%2BM8Ut%2FTPP9vAGCMu%2BOBJch858tm6Q%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,9 +212,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:47:06 GMT
+      - Tue, 06 Feb 2024 03:50:32 GMT
       X-Ratelimit-Reset:
-      - '1707191227'
+      - '1707191434'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -311,5 +311,5 @@ http_interactions:
         evil"}]}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:47:06 GMT
+  recorded_at: Tue, 06 Feb 2024 03:50:32 GMT
 recorded_with: VCR 6.2.0
